t-koma-knowledge/tests/snapshots/crawl_e2e__openrouter_crawl_topic_list.snap
---
source: t-koma-knowledge/tests/crawl_e2e.rs
expression: "serde_json::json!({\n    \"title\": &list[0].title, \"file_count\": list[0].file_count, \"tags\":\n    &list[0].tags,\n})"
---
file_count: 20
tags:
  - api
  - llm
  - openrouter
title: OpenRouter API
